2004-06-13  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patches to 2.6r5
	final. Add support for 2.6.6.

	* rtai-core/scripts/rtai-load.in: Use modprobe instead of insmod
	for modules from /lib/modules.

	* rtai-core/ipc/mq: Kludge to resolve conflicts with 2.6.6. This
	component is deprecated.

	* rtai-core/sched/rtai/sched_lxrt.c (enq_soft_ready_task): Attempt
	a quick fix to prevent the enqueuing from entering an infinite
	loop. Needs to be confirmed by Paolo.
	(rt_schedule): Re-instate the use of rtai_get_current() to fetch
	the current Linux task for safety.

2004-06-13  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* rtai-core/include/rtai_posix.h (pthread_rwlock_open_rt): Make depend on
	-D__USE_UNIX98.

	* rtai-core/include/rtai_posix.h: Include <stdlib.h> in user-space
	to satisfy references to malloc()/free().

2004-06-11  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/include/asm-i386/rtai_lxrt.h: Set __USER_DS when
	entering a 2.6 kernel (instead of __KERNEL_DS with 2.4). This
	fixes the random SEGVs experienced by user-space apps while LXRT
	apps were running. This bug was due to data segment register
	corruption and was specifically triggered by libc6 using the new
	sysenter/sysexit support.

2004-06-10  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Pass ARCH in RTAI_KBUILD_CMD for 2.6.

2004-06-11  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/sched/rtai/sched_lxrt.c: forced keeping Linux tasks 
	preempted by RTAI on the CPU they are. Affecting just SMP.

2004-06-09  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c (lxrt_context_switch): Use
	arch-independent context switch routine.

	* rtai-core/include/asm-i386/rtai_xeno.h (xnarch_switch_to):
	Inline mm switch code.

	* rtai-core/arch/i386/hal/hal.c: Discard rtai_linux_switch_mm().

2004-06-07  Philippe Gerum  <rpm@xenomai.org>
