@@ -322,12 +322,12 @@ target_alias = @target_alias@
 
 @CONFIG_MIPS_TRUE@ARCHDIR = mips
 
-@CONFIG_ARM_TRUE@ARCHDIR = arm
+@CONFIG_PPC_TRUE@ARCHDIR = ppc
 @CONFIG_X86_TRUE@ARCHDIR = i386
 
-@CONFIG_PPC_TRUE@ARCHDIR = ppc
-
 @CONFIG_CRIS_TRUE@ARCHDIR = cris
+
+@CONFIG_ARM_TRUE@ARCHDIR = arm
 
 SUBDIRS = $(ARCHDIR)
 subdir = rtai-core/arch
@@ -344,7 +344,7 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 	installdirs-recursive install-recursive uninstall-recursive \
 	check-recursive installcheck-recursive
 DIST_COMMON = $(srcdir)/GNUmakefile.in GNUmakefile.am
-DIST_SUBDIRS = mips arm i386 ppc cris
+DIST_SUBDIRS = mips ppc i386 cris arm
 all: all-recursive
 
 .SUFFIXES:
