@@ -322,12 +322,12 @@ target_alias = @target_alias@
 
 @CONFIG_MIPS_TRUE@ARCHDIR = asm-mips
 
-@CONFIG_ARM_TRUE@ARCHDIR = asm-arm
+@CONFIG_PPC_TRUE@ARCHDIR = asm-ppc
 @CONFIG_X86_TRUE@ARCHDIR = asm-i386
 
-@CONFIG_PPC_TRUE@ARCHDIR = asm-ppc
-
 @CONFIG_CRIS_TRUE@ARCHDIR = asm-cris
+
+@CONFIG_ARM_TRUE@ARCHDIR = asm-arm
 
 nobase_include_HEADERS = \
 		rtai.h \
@@ -402,7 +402,7 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 	check-recursive installcheck-recursive
 DIST_COMMON = $(nobase_include_HEADERS) $(srcdir)/GNUmakefile.in \
 	GNUmakefile.am
-DIST_SUBDIRS = asm-mips asm-arm asm-i386 asm-ppc asm-cris
+DIST_SUBDIRS = asm-mips asm-ppc asm-i386 asm-cris asm-arm
 all: all-recursive
 
 .SUFFIXES:
