@@ -1,0 +1,86 @@
+#! /bin/bash
+
+set -e
+
+die()
+{
+    echo Error: ${1+"$@"}
+    exit 1
+}
+
+progname=`basename $0`
+
+if ! [ -f docbook/catalog -a -d "$srcdir/generated" ]; then
+    die $progname must be run from the rtai-doc sub-directory of the build \
+tree and passed a correct srcdir variable.
+fi
+
+builddir=`pwd`
+abs_srcdir=`cd $srcdir && pwd`
+
+echo -n 'Running cvs update in the source tree...'
+cd "$abs_srcdir/.." && cvs up -dP && cd "$builddir"
+echo done
+
+echo 'Generating documentation in the build tree.'
+[ -d tmp-dist ] && rm -Rf tmp-dist
+make clean
+make doc_top_distdir=`pwd`/tmp-dist distdir
+
+if ! [ -d tmp-dist/rtai-doc/generated ]; then 
+    die Something went wrong when generating the documentation.
+fi
+
+echo -n 'Looking for removed files...'
+: > tmp-dist/removed
+{ cd "$abs_srcdir" && find generated -name CVS -prune -o -type f -print ; } | {
+cd tmp-dist/rtai-doc && while read -a file; do
+    if ! [ -f "${file[*]}" ]; then
+        echo "${file[*]}" >> ../removed
+    fi
+done
+}
+echo `cat tmp-dist/removed`.
+
+echo -n 'Looking for added files and directories...'
+: > tmp-dist/added_files
+: > tmp-dist/added_dirs
+{ cd tmp-dist/rtai-doc && find generated; } | {
+cd "$abs_srcdir" && while read -a file; do
+    if ! [ -e "${file[*]}" ]; then
+        if [ -f "$builddir/tmp-dist/rtai-doc/${file[*]}" ]; then
+            echo "${file[*]}" >> "$builddir/tmp-dist/added_files"
+        else
+            echo "${file[*]}" >> "$builddir/tmp-dist/added_dirs"
+        fi
+    fi
+done
+}
+echo `cat tmp-dist/added_dirs tmp-dist/added_files`
+
+echo -n 'Copying generated documentation in the source tree...'
+cp -aR tmp-dist/rtai-doc/generated "$abs_srcdir"
+echo done
+
+cd "$abs_srcdir"
+echo -n 'Removing files...'
+cat "$builddir/tmp-dist/removed" | while read -a file; do
+    echo rm "${file[*]}"
+    echo cvs remove "${file[*]}"
+done
+echo `cat "$builddir/tmp-dist/removed"` done.
+
+echo -n 'Adding new directories...'
+cat "$builddir/tmp-dist/added_dirs" | while read -a dir; do
+    echo cvs add "${dir[*]}"
+done
+echo `cat "$builddir/tmp-dist/added_dirs"` done.
+
+echo -n 'Adding new files...'
+    cat "$builddir/tmp-dist/added_files" | while read -a file; do
+    echo cvs add "${file[*]}"
+done
+echo `cat "$builddir/tmp-dist/added_files"` done.
+
+cvs commit generated -m 'generated doc update'
+cd "$builddir"
