@@ -620,6 +620,9 @@ uninstall-info: uninstall-info-recursive
 	uninstall uninstall-am uninstall-info-am \
 	uninstall-info-recursive uninstall-recursive
 
+
+generate-doc-and-commit:
+	srcdir=$(srcdir) $(top_srcdir)/rtai-core/scripts/generate-doc-and-commit
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
