@@ -1,7 +1,7 @@
 # -*- makefile -*-
 dbx_docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)
 
-dbx_top_distdir=$(top_builddir)/$(PACKAGE)-$(VERSION)
+dbx_top_distdir=$(doc_top_distdir)
 DBX_SRC_ROOT=$(top_srcdir)/$(DBX_DOC_ROOT)
 DBX_BUILD_ROOT=$(top_builddir)/$(DBX_DOC_ROOT)
 DBX_DIST_ROOT=$(dbx_top_distdir)/$(DBX_GEN_DOC_ROOT)
