@@ -12,8 +12,8 @@
 # PDF_DOCSDIR & PS_DOCSDIR: same thing for pdf and ps files.
 
 docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)
-
 doc_top_distdir=$(top_builddir)/$(PACKAGE)-$(VERSION)
+
 GEN_DOC_DIST_ROOT=$(doc_top_distdir)/rtai-doc/generated
 
 install-htmldocs: $(HTML_DOCS:%=$(HTML_DOCSDIR)%)
