@@ -343,11 +343,11 @@ EXTRA_DIST = \
 
 PS_DOCS = RTAI-RefGuide.ps 
 PDF_DOCS = RTAI-RefGuide.pdf
+@CONFIG_RTAI_LATEX_DOC_TRUE@PS_DOCSDIR = ./
 
 @CONFIG_RTAI_LATEX_DOC_FALSE@PS_DOCSDIR = $(srcdir)/../generated/ps/
-@CONFIG_RTAI_LATEX_DOC_TRUE@PS_DOCSDIR = ./
-@CONFIG_RTAI_LATEX_DOC_FALSE@PDF_DOCSDIR = $(srcdir)/../generated/pdf/
 @CONFIG_RTAI_LATEX_DOC_TRUE@PDF_DOCSDIR = ./
+@CONFIG_RTAI_LATEX_DOC_FALSE@PDF_DOCSDIR = $(srcdir)/../generated/pdf/
 
 # latex documentation
 @CONFIG_RTAI_LATEX_DOC_TRUE@TEX_SRCS = $(shell find $(srcdir) -name "*.tex")
@@ -363,8 +363,8 @@ PDF_DOCS = RTAI-RefGuide.pdf
 @CONFIG_RTAI_LATEX_DOC_TRUE@SUFFIXES = pdf dvi tex
 
 docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)
-
 doc_top_distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)
+
 GEN_DOC_DIST_ROOT = $(doc_top_distdir)/rtai-doc/generated
 subdir = rtai-doc/latex
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
